Fixed the spelling and the overlapping

--- a/styles.css
+++ b/styles.css
@@ -830,6 +830,7 @@ main {
   line-height: 1;
 }
 .testi .aside .name h4 {
+  margin-bottom: 12px;
   font-size: 22px;
   font-weight: 800;
   color: #1dc5c8;
